header js backup

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<header class="site-header grid">
 		<div class="grid one-third"></div>
 		<div class="grid one-third">
-			<button class="nav-btn" id="pvp-btn">PVP</button>
-			<button class="nav-btn" id="pve-btn">PVE</button>
+			<button class="nav-btn pvp-btn">PVP</button>
+			<button class="nav-btn pve-btn">PVE</button>
 		</div>
 		<div class="grid one-third content-right">
 			<button class="nav-btn">Quit</button>
