changed js selectors relating to the header to reflected the shanges made the the header markup

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<button class="nav-btn pve-btn">PVE</button>
 		</div>
 		<div class="grid one-third content-right">
-			<button class="nav-btn">Quit</button>
+			<button class="nav-btn quit">Quit</button>
 		</div>
 	</header>
-	<!-- <section class="container">
+	<section class="container">
 		<div class="image-container">
 			<img draggable="false" id="image-id" src="img/hangman.png" />
 		</div>
@@ -95,9 +95,9 @@
 				</div>
 			</div>
 		</div>
-	</menu> -->
+	</menu>
 	
-	<!-- <script src="js/app.js"></script> -->
+	<script src="js/app.js"></script>
 	<script src="https://kit.fontawesome.com/6163d4aebf.js" crossorigin="anonymous"></script>
 	
 </body>
