--- a/index.html
+++ b/index.html
@@ -11,88 +11,102 @@
 	
 </head>
 <body>
-	<header class="site-header grid">
-		<div class="grid one-third"></div>
-		<div class="grid one-third">
-			<button class="nav-btn pvp-btn">PVP</button>
-			<button class="nav-btn pve-btn">PVE</button>
-		</div>
-		<div class="grid one-third content-right">
-			<button class="nav-btn quit-btn">Quit</button>
-		</div>
-	</header>
-	<section class="main-content grid grid-column">
-		<div class="image-wrapper">
-			<img draggable="false" id="image-id" src="img/hangman.png" />
-		</div>
-	
-		<div class="word-wrapper grid">
-			<p class="noselect" id="on-screen-word"></p>
-		</div>
-	
-		<div class="keyboard-wrapper">
-			<div id="keyboard" class="keyboard">
-				<div class="letter" id="a">a</div>
-				<div class="letter" id="b">b</div>
-				<div class="letter" id="c">c</div>
-				<div class="letter" id="d">d</div>
-				<div class="letter" id="e">e</div>
-				<div class="letter" id="f">f</div>
-				<div class="letter" id="g">g</div>
-				<div class="letter" id="h">h</div>
-				<div class="letter" id="i">i</div>
-				<div class="letter" id="j">j</div>
-				<div class="letter" id="k">k</div>
-				<div class="letter" id="l">l</div>
-				<div class="letter" id="m">m</div>
-				<div class="letter" id="n">n</div>
-				<div class="letter" id="o">o</div>
-				<div class="letter" id="p">p</div>
-				<div class="letter" id="q">q</div>
-				<div class="letter" id="r">r</div>
-				<div class="letter" id="s">s</div>
-				<div class="letter" id="t">t</div>
-				<div class="letter" id="u">u</div>
-				<div class="letter" id="v">v</div>
-				<div class="letter" id="w">w</div>
-				<div class="letter" id="x">x</div>
-				<div class="letter" id="y">y</div>
-				<div class="letter" id="z">z</div>
+	<section class="viewport">
+		<header class="site-header grid">
+			<div class="grid one-third"></div>
+			<div class="grid one-third">
+				<button class="nav-btn pvp__btn">PVP</button>
+				<button class="nav-btn pve__btn">PVE</button>
 			</div>
-		</div>
+			<div class="grid one-third content-right">
+				<button class="nav-btn quit__btn">Quit</button>
+			</div>
+		</header>
+
+
+		<section class="main-content grid grid-column">
+			<!-- <div class="logo grid">
+				<img src="/img/SVG/landing-page-logo.svg" alt="">
+			</div> -->
+			<div class="top-section grid">
+				<div class="image-wrapper">
+					<img draggable="false" class="game__image" src="img/hangman.png" />
+				</div>
+			</div>
+			<div class="bottom-section grid grid-column">
+				<div class="word-wrapper grid">
+					<p class="word-display"></p>
+				</div>
+			
+				<div class="keyboard-wrapper grid">
+					<div class="keyboard">
+						<div class="letter grid" id="a"><p>a</p></div>
+						<div class="letter grid" id="b"><p>b</p></div>
+						<div class="letter grid" id="c"><p>c</p></div>
+						<div class="letter grid" id="d"><p>d</p></div>
+						<div class="letter grid" id="e"><p>e</p></div>
+						<div class="letter grid" id="f"><p>f</p></div>
+						<div class="letter grid" id="g"><p>g</p></div>
+						<div class="letter grid" id="h"><p>h</p></div>
+						<div class="letter grid" id="i"><p>i</p></div>
+						<div class="letter grid" id="j"><p>j</p></div>
+						<div class="letter grid" id="k"><p>k</p></div>
+						<div class="letter grid" id="l"><p>l</p></div>
+						<div class="letter grid" id="m"><p>m</p></div>
+						<div class="letter grid" id="n"><p>n</p></div>
+						<div class="letter grid" id="o"><p>o</p></div>
+						<div class="letter grid" id="p"><p>p</p></div>
+						<div class="letter grid" id="q"><p>q</p></div>
+						<div class="letter grid" id="r"><p>r</p></div>
+						<div class="letter grid" id="s"><p>s</p></div>
+						<div class="letter grid" id="t"><p>t</p></div>
+						<div class="letter grid" id="u"><p>u</p></div>
+						<div class="letter grid" id="v"><p>v</p></div>
+						<div class="letter grid" id="w"><p>w</p></div>
+						<div class="letter grid" id="x"><p>x</p></div>
+						<div class="letter grid" id="y"><p>y</p></div>
+						<div class="letter grid" id="z"><p>z</p></div>
+					</div>
+				</div>
+
+			</div>
+			
+		
+		</section>
+
 	</section>
-	<menu class="grid">
-		<div id="backdrop" class="backdrop"></div>
-		<div class="modal game-setup grid">
+	<menu class="menu grid">
+		<div class="backdrop"></div>
+		<div class="modal game-setup__modal grid">
 			<h2>Choose a word</h2>
-			<input id="input" class="grid" type="text" autocomplete="off" />
+			<input class="word__input grid" type="text" autocomplete="off" />
 			<div class="grid">
-				<button class="btn-white cancel" id="cancel__go">cancel</button>
-				<button class="btn-black go" id="go">Go</button>
+				<button class="btn btn-white cancel cancel__go">cancel</button>
+				<button class="btn btn-black go">Go</button>
 			</div>
 		</div>
-		<!-- <div class="modal post-game grid">
-			<h2 id="result"></h2>
-			<div class="answer" id="answer"></div>
+		<div class="modal post-game__modal grid">
+			<h2 class="result"></h2>
+			<div class="answer"></div>
 			<div class="stats">
 				<p>Time taken - 2:34</p>
-				<p id="lives-remaining"></p>
+				<p class="lives-remaining"></p>
 			</div>
-			<img id="result-image" src="" alt=""/>
+			<img class="result__image" src="" alt=""/>
 			<p class="play-again">Play again?</p>
 			<div class="post-game__nav grid">
-				<button id="play-again__no" class="no-btn">no</button>
-				<button id="play-again__yes" class="yes-btn">yes</button>
+				<button class="btn play-again__no no-btn">no</button>
+				<button class="btn play-again__yes yes-btn">yes</button>
 			</div>
 		</div>
 	
-		<div class="modal quit-menu grid">
+		<div class="modal quit__modal grid">
 			<h2>Are you sure?</h2>
 			<div class="grid">
-				<button id="quit__no" class="no-btn">no</button>
-				<button id="quit__yes" class="yes-btn">yes</button>
+				<button class="btn quit__no no-btn">no</button>
+				<button class="quit__yes yes-btn">yes</button>
 			</div>
-		</div> -->
+		</div>
 		
 	</menu>
 	
