--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
 				<button class="quit__yes yes-btn">yes</button>
 			</div>
 		</div>
+		<div class="img-loader" style="display: none;">
+			<img src="img/1x/SVG/h1.svg" alt="">
+			<img src="img/1x/SVG/h2.svg" alt="">
+			<img src="img/1x/SVG/h3.svg" alt="">
+			<img src="img/1x/SVG/h4.svg" alt="">
+			<img src="img/1x/SVG/h5.svg" alt="">
+			<img src="img/1x/SVG/h6.svg" alt="">
+			<img src="img/1x/SVG/h7.svg" alt="">
+			<img src="img/1x/SVG/h8.svg" alt="">
+			<img src="img/1x/SVG/h9.svg" alt="">
+			<img src="img/1x/SVG/h10.svg" alt="">
+			<img src="img/1x/SVG/h11.svg" alt="">
+		</div>
 		
 	</menu>
 	
