fixes and tiemr added

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<p class="result"></p>
 			<div class="answer"></div>
 			<div class="stats">
-				<p>Time taken - 2:34</p>
+				<p class="time-taken"></p>
 				<p class="lives-remaining"></p>
 			</div>
 			<img class="result__image" src="" alt=""/>
